# ff6-save-editor

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
ff6_save_editor/: encryption.py  main.py  models.py
tests/: conftest.py
tests/integration/: test_main.py
tests/unit/: test_encryption.py
