[project]
name = "ff6-save-editor"
version = "0.1.0"
description = "Final Fantasy VI Pixel Remaster Save Editor for Nintendo Switch"
authors = [
    { name = "Mathieu Lemay", email = "acidrain1@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "cryptography (>=45.0.4,<46.0.0)",
    "py3rijndael (>=0.3.3,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings[dotenv] (>=2.9.1,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
]

[tool.poetry]
include = ["ff6_save_editor/py.typed"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mypy = "^1.8.0"
faker = "^24.4.0"
pytest-cov = "^5.0.0"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
strict = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "COM",  # flake8-commas
    "D",  # pydocstyle
    "FIX",  # flake8-fixme
    "TD",  # flake8-todos

    "DTZ",  # flake8-datetimez: Timezones are not relevant for this

    # TODO: Remove those
    "ERA001",  # Commented out code
    "T201",  # print
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.field_validator",
    "pydantic.model_validator",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of `assert` detected
    "S105",  # Possible hardcoded password
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
