[project]
name = "ff6-save-editor"
version = "0.1.0"
description = "Final Fantasy VI Pixel Remaster Save Editor for Nintendo Switch"
authors = [
    { name = "Mathieu Lemay", email = "acidrain1@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cryptography>=46.0.4,<47.0.0",
    "py3rijndael>=0.3.3,<0.4.0",
    "pydantic>=2.11.7,<3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
strict = true
show_error_codes = true
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "COM",  # flake8-commas
    "D",  # pydocstyle
    "FIX",  # flake8-fixme
    "TD",  # flake8-todos
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.field_validator",
    "pydantic.model_validator",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # Magic value used in comparison
    "S101",  # Use of `assert` detected
    "S105",  # Possible hardcoded password
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
